--- a/release.json
+++ b/release.json
@@ -8,7 +8,7 @@
     "name": "test.zip",
     "release_date": "2016-12-20T20:16:02Z",
     "browser_download_url": "https://raw.githubusercontent.com/EggOxygen/OTA/master/test.zip",
-    "body": "This is my change log",
+    "body": "中文测试",
     "version" : "20161230"
   },
   {
